--- a/lldb/unittests/tools/CMakeLists.txt
+++ b/lldb/unittests/tools/CMakeLists.txt
@@ -1,5 +1,6 @@
 if(LLDB_TOOL_LLDB_SERVER_BUILD)
   if (NOT LLVM_USE_SANITIZER MATCHES ".*Address.*")
     add_subdirectory(lldb-server)
+    add_subdirectory(lldb-eval)
   endif()
 endif()
