Add a test binary linked against libc++

--- a/lldb/unittests/tools/lldb-eval/CMakeLists.txt
+++ b/lldb/unittests/tools/lldb-eval/CMakeLists.txt
@@ -34,7 +34,8 @@ add_lldb_unittest(LLDBEvalTests
   )
 
 set(test_inputs
-  test_binary.bin
+  test_binary_libc++.bin
+  test_binary_libstdc++.bin
   test_binary.cc
   )
 add_unittest_inputs(LLDBEvalTests "${test_inputs}")
