--- a/lldb/source/CMakeLists.txt
+++ b/lldb/source/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(Breakpoint)
 add_subdirectory(Commands)
 add_subdirectory(Core)
 add_subdirectory(DataFormatters)
+add_subdirectory(Eval)
 add_subdirectory(Expression)
 add_subdirectory(Host)
 add_subdirectory(Initialization)
