Add 4 unit tests and update everything to use lldbEval lib

--- a/lldb/unittests/tools/lldb-eval/CMakeLists.txt
+++ b/lldb/unittests/tools/lldb-eval/CMakeLists.txt
@@ -1,55 +1,90 @@
+add_llvm_tool_subdirectory(testfuzz)
+
 add_lldb_unittest(LLDBEvalTests
-  lldb-eval/api.cc
-  lldb-eval/ast.cc
-  lldb-eval/context.cc
-  lldb-eval/eval.cc
-  lldb-eval/parser.cc
-  lldb-eval/parser_context.cc
-  lldb-eval/type.cc
-  lldb-eval/value.cc
-  lldb-eval/runner.cc
   eval_test.cc
 
   LINK_LIBS
-    clangBasic
-    clangLex
-    lldbHostHelpers
-    lldbBreakpoint
-    lldbCommands
-    lldbCore
-    lldbDataFormatters
-    lldbExpression
-    lldbHost
-    lldbInitialization
-    lldbInterpreter
-    lldbSymbol
-    lldbTarget
-    lldbUtility
-    lldbUtilityHelpers
     liblldb
+    lldbEval
+    lldbUtilityHelpers
     LLVMTestingSupport
-
-  LINK_COMPONENTS
-    Support
   )
 
-set(test_inputs
+add_lldb_unittest(LLDBEvalMutateTests
+  fuzzer/ast.cc
+  fuzzer/constraints.cc
+  fuzzer/expr_gen.cc
+  fuzzer/fixed_rng.cc
+  fuzzer/gen_node.cc
+  fuzzer/symbol_table.cc
+  mutate_test.cc
+
+  LINK_LIBS
+    liblldb
+    lldbEval
+    lldbUtilityHelpers
+    LLVMTestingSupport
+  )
+
+add_lldb_unittest(LLDBEvalUtilsTests
+  fuzzer/ast.cc
+  fuzzer/constraints.cc
+  fuzzer/expr_gen.cc
+  fuzzer/fixed_rng.cc
+  fuzzer/gen_node.cc
+  fuzzer/symbol_table.cc
+  libfuzzer_utils_test.cc
+
+  LINK_LIBS
+    liblldb
+    lldbEval
+  )
+
+add_lldb_unittest(LLDBEvalSymbolTableTests
+  fuzzer/ast.cc
+  fuzzer/constraints.cc
+  fuzzer/expr_gen.cc
+  fuzzer/fixed_rng.cc
+  fuzzer/gen_node.cc
+  fuzzer/symbol_table.cc
+  symbol_table_test.cc
+
+  LINK_LIBS
+    liblldb
+    lldbEval
+    lldbUtilityHelpers
+    LLVMTestingSupport
+  )
+
+add_lldb_unittest(LLDBEvalFuzzerTests
+  fuzzer/ast.cc
+  fuzzer/constraints.cc
+  fuzzer/expr_gen.cc
+  fuzzer/fixed_rng.cc
+  fuzzer/gen_node.cc
+  fuzzer/symbol_table.cc
+  fuzzer_test.cc
+
+  LINK_LIBS
+    liblldb
+    lldbEval
+  )
+
+set(test_lib
   test_binary_libc++.bin
   test_binary_libstdc++.bin
   test_binary.cc
   )
-add_unittest_inputs(LLDBEvalTests "${test_inputs}")
+set(test_fuzzer
+  fuzzer_binary.bin
+  fuzzer_binary.cc
+  )
+add_unittest_inputs(LLDBEvalTests "${test_lib}")
+add_unittest_inputs(LLDBEvalMutateTests "${test_fuzzer}")
+add_unittest_inputs(LLDBEvalSymbolTableTests "${test_fuzzer}")
+
 
 add_lldb_tool(lldb-eval-fuzzer
-  lldb-eval/api.cc
-  lldb-eval/ast.cc
-  lldb-eval/context.cc
-  lldb-eval/eval.cc
-  lldb-eval/parser.cc
-  lldb-eval/parser_context.cc
-  lldb-eval/type.cc
-  lldb-eval/value.cc
-  lldb-eval/runner.cc
   fuzzer/ast.cc
   fuzzer/constraints.cc
   fuzzer/expr_gen.cc
@@ -64,7 +99,5 @@ add_lldb_tool(lldb-eval-fuzzer
 
   LINK_LIBS
     liblldb
-
-  LINK_COMPONENTS
-    Support
+    lldbEval
   )
